Modification resolves #9 for image alignment

--- a/CSS/calendar.css
+++ b/CSS/calendar.css
@@ -138,7 +138,6 @@
 }
 
 .circle {
-    background-color: #FF4D4D;
     border-radius: 25px;
 }
 
