--- a/CSS/sitecredits.css
+++ b/CSS/sitecredits.css
@@ -46,7 +46,7 @@
     flex: 1; /* Allow the paragraph to take necessary space */
 }
 
-.profile img, .profimg {
+.profile img, .profimg, .profimg2 {
     justify-content: center;
     align-items: center;
     align-self: center;
