--- a/CSS/summary.css
+++ b/CSS/summary.css
@@ -71,3 +71,11 @@ span:hover {
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
+
+.summary_card strong {
+    color: white;
+}
+
+.stat-holder p, .stat-holder span {
+color: #FF4D4D;
+}
